--- a/vue-team-project/package.json
+++ b/vue-team-project/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^3.5.27",
+    "vue-i18n": "^11.2.8",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
